--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </ul>
   </div>
 <script src="script.js"></script>
-
+<canvas id="canvas" width="700px" height="600px"></canvas>
 
 </body>
 </html>
