commit to master

--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1 id="title">Etch a Sketch</h1>
-  <div id="options-list">
-    <ul id="vertical-list">
-      <li><button class="reset-button" type="button" value="reset">Rest</button></li>
-      <li><button class="rainbow-button" type="button" value="rainbow">Rainbow Mode</button></li>
-      <li><button class="dark-button" type="button" value="dark">Dark Mode</button></li>
+  <h1 class="title">Etch a Sketch</h1>
+  <div class="optionsList">
+    <ul class="vertical-list">
+      <li><button class="resetButton" type="button" value="reset">Rest</button></li>
+      <li><button class="rainbowButton" type="button" value="rainbow">Rainbow Mode</button></li>
+      <li><button class="darkModeButton" type="button" value="dark">Dark Mode</button></li>
     </ul>
   </div>
-  <div id="main-div"></div>
-  <div id="toggle-list">
-    <ul id="vertical-list2">
-      <li><button class="eraser-button" type="button" value="erase">Eraser</button></li>
-      <li><button class="clickAndDrag-button" type="button" value="clickdrag">Click and Drag Mode</button></li>
-      <li><button class="selectSize-button" type="button" value="gridsize">Modify Grid Size</button></li>
+  <div class="gridDiv"><div class="grid"></div>
+  <div class="toggleKist">
+    <ul class="verticalList2">
+      <li><button class="eraserButton" type="button" value="eraser">Eraser : Off</button></li>
+      <li><button class="clickAndDragButton" type="button" value="clickdrag">Click and Drag Mode</button></li>
+      <li><button class="selectSizeButton" type="button" value="gridsize">Modify Grid Size</button></li>
     </ul>
   </div>
 <script src="script.js"></script>
