--- a/index.html
+++ b/index.html
@@ -2,28 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Etch a sketch</title>
+  <title>Calculater</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1 class="title">Etch a Sketch</h1>
-  <div class="optionsList">
-    <ul class="vertical-list">
-      <li><button class="resetButton" type="button" value="reset">Rest</button></li>
-      <li><button class="rainbowButton" type="button" value="rainbow">Rainbow Mode</button></li>
-      <li><button class="darkModeButton" type="button" value="dark">Dark Mode</button></li>
-    </ul>
-  </div>
-  <div class="gridDiv"><div class="grid"></div>
-  <div class="toggleKist">
-    <ul class="verticalList2">
-      <li><button class="eraserButton" type="button" value="eraser">Eraser : Off</button></li>
-      <li><button class="clickAndDragButton" type="button" value="clickdrag">Click and Drag Mode</button></li>
-      <li><button class="selectSizeButton" type="button" value="gridsize">Modify Grid Size</button></li>
-    </ul>
-  </div>
+
 <script src="script.js"></script>
-<canvas id="canvas" width="700px" height="600px"></canvas>
+
 
 </body>
 </html>
